--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CloudFilms</title>
 <link rel="stylesheet" href="./style.css">
+<link rel="icon" type="imagens" href="./imagens/logo cloudfilms.jpg">
 
 
 </head>
@@ -42,18 +43,20 @@
 
     </header>
 
-    <section class="slide">
-    
-        <div>
-            <img src="./imagens/imgSlide.jpg" alt="">
+    <section >
+        <div class="container__carrocel">
+            <div class="imagem__carrocel">
+                <img src="./imagens/imgSlide.jpg" alt="corrosel de imagens" width="890px">
+            </div>
+
+                <aside>
+                    <div class="img__lateral">
+                        <div><img src="./imagens/aside1.jpg" alt="cartaz do filme: Spider-man: Across The Siderverse 2023"></div>
+                        <div><img src="./imagens/aside2.jpg" alt="cartaz do filme: A pequena sereia 2023"></div>
+                        <div><img src="./imagens/aside3.jpg" alt="cartaz do filme: Elementos 2023"></div>
+                    </div>
+                </aside>
         </div>
-
-            <aside>
-                <img src="./imagens/aside1.jpg" alt="cartaz do filme: Spider-man: Across The Siderverse 2023">
-                <img src="./imagens/aside2.jpg" alt="cartaz do filme: A pequena sereia 2023">
-                <img src="./imagens/aside3.jpg" alt="cartaz do filme: Elementos 2023">
-            </aside>
-
     </section>
 
     <hr>
