--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>CloudFilms</title>
 <link rel="stylesheet" href="./style.css">
 <link rel="icon" type="imagens" href="./imagens/logo cloudfilms.jpg">
+<script src="https://kit.fontawesome.com/58aa61e40e.js" crossorigin="anonymous"></script>
 
 
 
@@ -104,39 +105,39 @@
 
 
     <footer>
-        <div>
+        <div class="contatos">
 
             <h3>REDES SOCIAIS</h3>
             
             <ul>
                 <li>
                     <a href="#" title="Siga-nos no tiktok">
-                        <img src="./imagens/logo-tiktok.jpg" alt="Logo do tiktok" width="40"/>
+                        <i class="fa-brands fa-tiktok"></i>
                     </a>
                 </li>
 
                 <li>
                     <a href="#" title="Siga-nos no Instagran">
-                        <img src="./imagens/logo-instagran.jpg" alt="Logo do instagran" width="40"/>
+                        <i class="fa-brands fa-instagram"></i>
                     </a>
                 </li>
 
                 <li>
                     <a href="#" title="Siga-nos no Facebook">
-                        <img src="./imagens/logo-facebook.jpg" alt="Logo do Facebook" width="40"/>
+                        <img src="../atividade-de-hoje/icons/Facebook.png" alt="Logo do Facebook" width="40"/>
                     </a>
                 </li>
 
                 <li>
                     <a href="#" title="Siga-nos no twitter">
-                        <img src="./imagens/logo-twitter.jpg" alt="Logo do twitter" width="40"/>
+                        <i class="fa-brands fa-twitter"></i>
                     </a>
                 </li>
 
             </ul>
         </div>
 
-        <div>
+        <div class="informações__site">
             <ul>
                 <li>
                     <a href="termos.html#termos__Ancora" title="termos">TERMOS</a>
